// Если вкратце:
// У нас здесь пишутся все
// Generated according to https://cloud.google.com/apis/design/standard_methods


syntax = "proto3";

option go_package = "github.com/Irurnnen/gRPCexample/proto";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}


message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}